tests/fixtures/coflow/invalid/parse/for-missing-in.cf
fn main() {
  for item items {
  }
}
